# flake-templates

./: README.md  flake.nix
cpp/: .gitignore  CMakeLists.txt  flake.nix
cpp/src/: CMakeLists.txt  main.cpp
cs536/: flake.nix
nodejs/: .gitignore  flake.nix
python/: .gitignore  flake.nix  pyproject.toml
rust/: .gitignore  flake.nix
